# parallel-and-distributed

./: .gitignore  project.code-workspace
mpi/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  context.txt  docker-compose.yml  hype.slurm  mpi_p2p_naobloqueante.c  run.slurm  slurm.conf
mpi/docs/: report.tex  results.ipynb
mpi/include/: comm_strategies.h
mpi/originals/: Makefile  mpi_coletiva.c  mpi_p2p_bloqueante.c  run.slurm
mpi/report/: 2nodes_try.csv  central.csv  mpi_results_712297.csv  mpi_results_713283.csv  mpi_results_713284.csv  mpi_results_713285.csv  mpi_results_713287.csv  mpi_results_713325.csv  mpi_results_713326.csv  mpi_results_713327.csv
mpi/report/old/: 1node_32_8k.csv  2nodes_32_8k!.csv  2nodes_64_8k.csv  3nodes_32_8k.csv  3nodes_32_8k_again.csv  3nodes_64_8k.csv  central.csv  mpi_results_local.csv
mpi/scripts/: batch_test.py  entrypoint.sh  exec_runs.py
mpi/src/: async.c  async_naive.c  async_new.c  collective.c  main.c  sync.c
openmp/: .gitignore  CMakeLists.txt  Makefile  hype.slurm
openmp/.devcontainer/: Dockerfile  devcontainer.json
openmp/data/: in_1.in  in_1024.in  in_128.in  in_131072.in  in_16.in  in_16384.in  in_2.in  in_2048.in  in_256.in  in_262144.in  in_32.in  in_32768.in  in_4.in  in_4096.in  in_512.in  in_64.in  in_65536.in  in_8.in  in_8192.in
openmp/docs/: .gitignore  presentation.md  report.tex  results.ipynb  sample.bib
openmp/misc/: gen_input.py
openmp/report/batchs/: batch_results_parallel.csv  hype_complete.csv  hype_no_binding_debug.csv  hype_threshold.csv  m3_no_binding.csv
openmp/report/gprof/: simple.in_sequential.report
openmp/scripts/: batch_test.py  gen_input.py  validate.py  vtune.py
openmp/src/: bitonic.c  bitonic_parallel.c  bitonic_parallel_v1.c  sort.c  test.c
